# ars-dl

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: batch.rs  main.rs  single.rs  utils.rs
src/batch/: mod.rs
src/single/: mirror.rs  mod.rs
