[package]
name = "ars-dl"
version = "0.0.2"
edition = "2024"
authors = ["classronin"]
description = "一个轻量级的命令行下载器，具有智能回退和隐身浏览器支持。"
repository = "https://github.com/classronin/ars-dl"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "http2"] }
anyhow = "1"
regex = "1"
url = "2"
indicatif = "0.17"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
robust_downloader = "0.0.16"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unused = "allow"
dead_code = "allow"

[profile.dist]
inherits = "release"
lto = "thin"